--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/push-notification-ios": "^1.8.0",
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/drawer": "^5.11.4",
     "@react-navigation/material-top-tabs": "^5.3.10",
@@ -22,6 +23,7 @@
     "react-native-gesture-handler": "^1.9.0",
     "react-native-modal": "^11.5.6",
     "react-native-paper": "^4.4.1",
+    "react-native-push-notification": "^6.1.3",
     "react-native-reanimated": "^1.13.2",
     "react-native-responsive-screen": "^1.4.1",
     "react-native-safe-area-context": "^3.1.9",
